hphp/test/slow/coeffects/meth-caller-7.php.expectf
Fatal error: Class undefined: A in %s on line 7
